[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
log = "0.4"
env_logger = "0.10"
mongodb = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bson = "2.6"
futures = "0.3"